<resources>
    <string name="app_name">Madventures</string>
    <string name="app_desc">This application can be used to help you during your travels.
    The main functionality is creating and maintaining a list of Itineraries. You can think of an \'Itinerary\'
    as a trip to the museum, trip to the airport, a 3 day camping trip. You can create new Itineraries,
        and in the \'My Itinerary\' section, when you long press on an item in the list, you will be able to delete the Itinerary.
    Auxiliary functionality also exists, such as unit conversion, currency conversion, a tip calculator, daily weather forecast,
        Google Maps integrated into the application itself, and other features such as local recommendations and budget tracking will be coming in the next updates.
    We would like to thank Stack Overflow for answering all our questions.
    Mr. Bernard and the TA\'s Maude and Etienne for their time and help.
    All copyrights go to their rightful owners, including the images.
    Google Maps API and Google Places API are Copyrighted 2013 under The Android Open Source Project
    and are licensed under the Apache License.</string>

    <string name="title_activity_maps">Map</string>

    <string name="action_settings">Settings</string>
    <string name="activity1">Activity</string>
    <string name="tip_calc_title">Tip Calculator</string>
    <string name="bill">Bill</string>
    <string name="tip">Tip</string>
    <string name="tip_total">Final Tip</string>
    <string name="final_total">Final Total</string>
    <string name="first_tip_rate">10%</string>
    <string name="second_tip_rate">15%</string>
    <string name="third_tip_rate">20%</string>
    <string name="manuel_tip_rate">Let me decide!</string>
    <string name="number_of_humans">Number of people</string>
    <string name="total_for_each">Total Per Person</string>
    <string name="calc">Calculate Tip</string>
    <string name="conversion">Conversion</string>
    <string name="cur_converter">Currency Converter</string>
    <string name="weather_activity">Weather</string>
    <string name="submit">Submit</string>
    <string name="cur">Prompt</string>
    <string name="newItinerary">Create New Itinerary</string>
    <string name="date_picker_info">Search</string>

    <!-- String for main menu -->
    <string name="logo_image">Logo image</string>
    <string name="today_activity">Today!</string>
    <string name="itinerary_activity">Current Trip Itinerary</string>
    <string name="manage_trips_activity">Manage your Trips</string>

    <string name="convert">Convert</string>
    <string name="unexpected_parsing_error">An Unexpected error has occurred</string>
    <string name="placeholder">This page is currently in development</string>
    <string name="fetching_msg">Fetching…</string>
    <string name="full_name_error">Must enter your full name</string>
    <string name="ok">OK</string>
    <string name="dialog_message">Are you sure you want to delete this item?</string>
    <string name="dialog_title">Confirmation for deletion</string>
    <string name="cancel">Cancel</string>
    <string name="delete_cancel">Deletion cancelled</string>
    <string name="delete_ok">Item has been deleted</string>

    <!-- Strings for imperial to metric converter -->
    <string name="mi_conv_title">Converter</string>
    <string name="distance">Distance</string>
    <string name="volume">Volume</string>
    <string name="weight">Weight</string>
    <string name="to">To</string>
    <string name="button_conv_distance_itm">Convert Distance ITM</string>
    <string name="button_conv_distance_mti">Convert Distance MTI</string>
    <string name="button_conv_volume_itm">Convert Volume ITM</string>
    <string name="button_conv_volume_mti">Convert Volume MTI</string>
    <string name="button_conv_weight_itm">Convert Weight ITM</string>
    <string name="button_conv_weight_mti">Convert Weight MTI</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="authors">Elias, Nader, Walid</string>
    <string name="authorstitle">Authors:</string>
    <string name="udem">University de Montreal</string>
    <string name="courseid">IFT 2905</string>
    <string name="title_activity_user_info">Info</string>
    <string name="entername">Enter your full name:</string>
    <string name="saveinfo">Continue</string>
    <string name="helloUser">Hello\u0020</string>

    <!-- Strings for weather -->
    <string name="location_label">Location:\u0020</string>
    <string name="weather_label">Weather:\u0020</string>
    <string name="description_label">Description:\u0020</string>
    <string name="humidity_label">Humidity:\u0020</string>
    <string name="celcius">\u0020degrees celcius</string>
    <string name="weather_error">Please turn on your location settings so that we can provide you with accurate weather!</string>
    <string name="weather_url_error">Unable to retrieve web page. URL may be invalid.</string>
    <string name="server_return">Server returned:\u0020</string>
    <string name="aborting_read">\u0020aborting read.</string>
    <string name="about">About</string>

    <!--  Strings for currency -->
    <string name="network_conn_error">No network connection available</string>
    <string name="curr_support">Currency Not Supported; maybe in the next realease?!</string>
    <string name="field_empty">Please fill out the field</string>


    <!--  Strings for tip calculator -->
    <string name="invalid_input_title">Invalid input!</string>
    <string name="invalid_input_mess">Please enter a value!</string>
    <string name="invalid_input_pos">OK</string>


    <!--  Strings for create new itinarery -->
    <string name="create_new_itinerary">Save</string>
    <string name="location_name">Name of area *</string>
    <string name="location_desc">Location Description</string>
    <string name="location_city">City</string>
    <string name="location_cc">Country Code</string>

    <string name="itinerary_date_arrived">Date Arrived</string>
    <string name="date_picker_info_compaqt">Search Itinerary by arrival date</string>
    <string name="itinerary_date_depart">Date Depart</string>
    <string name="itinerary_amount_input">Budgeted Expense</string>
    <string name="itinerary_desc">Itinerary Description</string>
    <string name="itinerary_categ">Category</string>
    <string name="itinerary_supplier_name">Supplier Name</string>
    <string name="itinerary_address">Address</string>

    <!--  Strings for Itinarery details-->
    <string name="itinerary_details">Itinerary Details</string>
    <string name="title_disc">Discard</string>
    <string name="msg_disc">Are you sure you want to discard changes?</string>
    <string name="yes_disc">Yes</string>
    <string name="no_disc">No</string>
    <string name="add_actual">Add an actual expense</string>
    <string name="actual_amt">Actual Expense</string>
    <string name="location_preset">Location Preset</string>

    <!--  Strings for Settings-->
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="passwd">Password</string>
    <string name="basecamp_curr">Home Currency</string>
    <string name="subm">Submit</string>

    <!--  Strings for Manage Trips-->
    <string name="synch">Synch</string>
    <string name="synch_error">Error Synching</string>
    <string name="json_error">Error parsing json</string>
    <string name="succes_synch">Successfully Synched!</string>
    <string name="invalid_auth">Invalid username or password</string>


    <string name="intro_title">PlacePicker Sample</string>

    <string name="pick_title">Pick a place</string>
    <string name="pick_text">Clicking below constructs an Intent to show the place picker dialog.
\nIf a place was selected, its details are read from the returned data and shown in a separate card.
</string>
    <string name="pick_action">Pick a place</string>

    <string name="detail_text">Place id: %1$s\nAddress: %2$s\nPhone: %3$s\n\n%4$s</string>

    <string name="empty"></string>

    <string name="intro_message">
        <![CDATA[


            This sample uses the PlacePicker.Builder to construct an Intent to launch the place
            picker dialog. Users can select a place or add a new place,
            which is then returned to the application.



        ]]>
    </string>
</resources>
