<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bill_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc"
                android:text="@string/bill" />

            <EditText
                android:id="@+id/bill_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc"
                android:inputType="number"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc"
                android:text="@string/tip"/>

            <EditText
                android:id="@+id/tip_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc"
                android:inputType="number"/>

        </LinearLayout>

        <!-- Maybe remove the padding elements for much better results on small screens -->
        <RadioGroup android:id="@+id/radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/manuel_tip_rate">

            <RadioButton android:id="@+id/first_tip_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_tip_rate"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/second_tip_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_tip_rate"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/third_tip_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_tip_rate"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/manuel_tip_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manuel_tip_rate"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/final_tip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="30dp"
                android:text="@string/tip_total"/>

            <TextView
                android:id="@+id/final_tip_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="30dp" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc"
                android:text="@string/final_total"/>

            <TextView
                android:id="@+id/total_label_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/number_of_humans_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc"
                android:text="@string/number_of_humans"/>

            <EditText
                android:id="@+id/numbers_for_humans_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc"
                android:inputType="number"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/total_per_person_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc"
                android:text="@string/total_for_each"/>

            <TextView
                android:id="@+id/total_per_person_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="@dimen/padding_tip_calc"/>
        </LinearLayout>

        <Button
            android:id="@+id/calc_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/calc"/>

    </LinearLayout>
</ScrollView>